
[package]
name = "sewup-rdb-example"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

# See the following examples
# https://github.com/second-state/SewUp/tree/main/examples/hello-contract
# https://github.com/second-state/SewUp/tree/main/examples/default-contract

[dependencies]
sewup = { version = "0.1.8", features = [ "rdb" ]}
sewup-derive = { version = "0.1.8", features = [ "rdb" ] }
serde = "1.0"
serde_derive = "1.0"
paste = "1.0"
anyhow = "*"
# thiserror = "*"

[profile.release]
incremental = false
panic = "abort"
lto = true
opt-level = "z"

[profile.release.package.sewup-rdb-example]
incremental = false
opt-level = "z"

[features]
constructor = []
constructor-test = []
